added custom fonts

--- a/initial/package.json
+++ b/initial/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/amatic-sc": "^0.2.3",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@fontsource/rubik": "^5.0.18",
+    "@fontsource/rubik-doodle-shadow": "^5.0.1",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
